tests/baselines/reference/callConstructAssignment.errors.txt
tests/cases/compiler/callConstructAssignment.ts(5,1): error TS2322: Type 'new () => any' is not assignable to type '() => void'.
  Type 'new () => any' provides no match for the signature '(): void'.
tests/cases/compiler/callConstructAssignment.ts(6,1): error TS2322: Type '() => void' is not assignable to type 'new () => any'.
  Type '() => void' provides no match for the signature 'new (): any'.


==== tests/cases/compiler/callConstructAssignment.ts (2 errors) ====
    var foo:{ ( ):void; }
    
    var bar:{ new ( ):any; }
    
    foo = bar; // error
    ~~~
!!! error TS2322: Type 'new () => any' is not assignable to type '() => void'.
!!! error TS2322:   Type 'new () => any' provides no match for the signature '(): void'.
    bar = foo; // error
    ~~~
!!! error TS2322: Type '() => void' is not assignable to type 'new () => any'.
!!! error TS2322:   Type '() => void' provides no match for the signature 'new (): any'.